--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node src/tests/app.test.js",
     "start": "nodemon src/app.js"
   },
   "keywords": [],
@@ -16,7 +16,6 @@
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "mongoose": "^8.1.1",
-    "nodemon": "^3.0.3",
-    "supertest": "^6.3.4"
+    "nodemon": "^3.0.3"
   }
 }
